K8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.network/network-mongoapi: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: FLASK_APP
          # image: sourirob/projet_filrouge-main_api
          image: RobinReinling/projet_filrouge-main_api
          name: api-projet
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
      restartPolicy: Always
status: {}
