K8s/network-mongoapi-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-mongoapi
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/network-mongoapi: "true"
  podSelector:
    matchLabels:
      io.kompose.network/network-mongoapi: "true"
